fix logo on safari

--- a/src/assets/styles/04-components/header.scss
+++ b/src/assets/styles/04-components/header.scss
@@ -175,7 +175,7 @@
   @apply items-center flex my-2 lg:my-0;
 
   img {
-    @apply max-h-14 sm:max-h-16 max-w-[170px];
+    @apply w-auto max-h-14 sm:max-h-16 max-w-[170px];
   }
 }
 
